add feature change in featuress

--- a/project3/ind.html
+++ b/project3/ind.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <p>
+        THIS CHANGE IS ONLY FROM FEATURESS BRANCH
+    </p>
     
 </body>
 </html>
